[gd_scene load_steps=8 format=3 uid="uid://50bxmarultdu"]

[ext_resource type="Script" path="res://registry_real.gd" id="1_7tcl7"]
[ext_resource type="Texture2D" uid="uid://bv4malnmu6tkb" path="res://assets/minus-16x16.png" id="2_4x7bd"]
[ext_resource type="StyleBox" uid="uid://ctksb1b8ns7s3" path="res://theme/panel/rounded_stylebox_16x16.tres" id="2_dk8hv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nnns8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cfi1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yivaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi0kr"]
bg_color = Color(0.233925, 0.233925, 0.233925, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="registry" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 496.0
offset_bottom = 24.0
script = ExtResource("1_7tcl7")

[node name="Registry" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 272.0
offset_bottom = 25.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_nnns8")

[node name="Cluster" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 280.0
offset_right = 472.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cfi1")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 20.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yivaq")
theme_override_styles/hover = SubResource("StyleBoxFlat_hi0kr")
theme_override_styles/pressed = ExtResource("2_dk8hv")
theme_override_styles/normal = ExtResource("2_dk8hv")
icon = ExtResource("2_4x7bd")
icon_alignment = 1

[connection signal="focus_entered" from="Registry" to="." method="_on_registry_focus_entered"]
[connection signal="focus_exited" from="Registry" to="." method="_on_registry_focus_exited"]
[connection signal="text_changed" from="Registry" to="." method="_on_registry_text_changed"]
[connection signal="item_selected" from="Cluster" to="." method="_on_cluster_item_selected"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
